--- a/css/index-style.css
+++ b/css/index-style.css
@@ -20,12 +20,14 @@ body {
 
 /*header*/
 header {
+	float: left;
 	padding-right: 0.2rem;
 	padding-left: 0.2rem;
 	width: 100%;
 	height: 0.3rem;
-	overflow: hidden;
+	
 }
+
 .phone {
 	display: none;
 	color: #29b078;
@@ -41,8 +43,31 @@ header {
 	padding-top: 0.02rem;
 }
 .icon-group li {
+	position: relative;
 	margin-right: 0.1rem;
 }
+.icon-group li:hover a {
+	animation: myfirst 1s;
+}
+@keyframes myfirst
+{
+	0%   { transform: translateY(-25px);}
+	100% {transform: translateY(0px);}
+}
+.weixin:hover img {
+	display: inline-block;
+}
+.weixin img {
+	display: none;
+	position: absolute;
+	top: 0.25rem;
+	left: 0;
+	transform: translateX(-50%);
+	margin-left: 50%;
+	z-index: 1000;
+	border: 2px solid #fff;
+}
+
 .bg-qq {
 	display: inline-block;
     width: 25px; height: 24px;
@@ -58,7 +83,6 @@ header {
     width: 25px; height: 24px;
     background: url(../image/index-assets/css_sprites.png) -10px -179px;
 }
-
 .breadcrumb {
 	float: right;
 	line-height: 0.3rem;
@@ -83,13 +107,18 @@ header {
 
 /*navegation*/
 .navbar {
+	position: relative;
 	border: none;
 	border-radius: 0;
 	background: #29b078;
 	font-size: 0.17rem;	
 	color: #fff;	
 	margin: 0;
+	z-index: 100;
+	clear: both;
+	
 }
+
 .nav a{
 	text-align: center;
 }
